--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -7,7 +7,7 @@ venue: "London School of Testing"
 date: 2014-02-01
 location: "London, UK"
 ---
-
+<!-- 
 [More information here](http://example2.com)
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown! -->
