--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -8,4 +8,4 @@ date: 2014-03-01
 location: "Los Angeles, CA"
 ---
 
-<!-- This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field. -->
+This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.
