--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,6 +4,10 @@ excerpt: "Page not found. Your pixels are in another canvas."
 sitemap: false
 permalink: /404.html
 ---
+
+Sorry, but the page you typed does not exist or is not implemented yet.
+Hope you find your way :)
+
 <!-- 
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
 
